// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no group (all groups default) 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
          >
            <View
              collapsable={false}
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                >
                  MockedScreen
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
        >
          <View
            collapsable={false}
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View>
                        <RCTScrollView
                          ListFooterComponent={null}
                          ListHeaderComponent={
                            <View>
                              <View>
                                <SearchBar
                                  onChangeText={[Function]}
                                  placeholder="Search Members"
                                />
                                <PopupMenuButton
                                  actions={[]}
                                >
                                  <Text />
                                  <Icon
                                    name="ArrowDown"
                                  />
                                </PopupMenuButton>
                              </View>
                            </View>
                          }
                          data={
                            [
                              {
                                "avatarUrl": "foo.gif",
                                "bio": "Hello!",
                                "id": "1",
                                "location": "here",
                                "name": "Foo Lane",
                              },
                              {
                                "avatarUrl": "bar.png",
                                "bio": "Not a stork",
                                "id": "2",
                                "location": "there",
                                "name": "Bar Jones",
                              },
                              {
                                "avatarUrl": "baz.png",
                                "bio": "Could be",
                                "id": "3",
                                "name": "Baz Chu",
                              },
                              {
                                "avatarUrl": "bonk.jpg",
                                "id": "4",
                                "name": "Bonk Gundsdottir",
                              },
                              {
                                "avatarUrl": "woof.png",
                                "id": "5",
                              },
                              {
                                "id": -1,
                              },
                            ]
                          }
                          getItem={[Function]}
                          getItemCount={[Function]}
                          keyExtractor={[Function]}
                          onContentSizeChange={[Function]}
                          onEndReached={[Function]}
                          onLayout={[Function]}
                          onMomentumScrollBegin={[Function]}
                          onMomentumScrollEnd={[Function]}
                          onScroll={[Function]}
                          onScrollBeginDrag={[Function]}
                          onScrollEndDrag={[Function]}
                          removeClippedSubviews={false}
                          renderItem={[Function]}
                          scrollEventThrottle={50}
                          stickyHeaderIndices={[]}
                          viewabilityConfigCallbackPairs={[]}
                        >
                          <View>
                            <View
                              onLayout={[Function]}
                            >
                              <View>
                                <View>
                                  <View>
                                    <Icon
                                      name="Search"
                                    />
                                    <TextInput
                                      autoCapitalize="none"
                                      autoCorrect={false}
                                      autoFocus={false}
                                      editable={true}
                                      onChangeText={[Function]}
                                      placeholder="Search Members"
                                      underlineColorAndroid="transparent"
                                    />
                                  </View>
                                  <View
                                    accessible={true}
                                    collapsable={false}
                                    focusable={true}
                                    hitSlop={
                                      {
                                        "bottom": 5,
                                        "left": 5,
                                        "right": 5,
                                        "top": 5,
                                      }
                                    }
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                  >
                                    <Text />
                                    <Icon
                                      name="ArrowDown"
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                            >
                              <View>
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "foo.gif",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Foo Lane
                                  </Text>
                                  <Text>
                                    here
                                  </Text>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Hello!
                                  </Text>
                                </View>
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "bar.png",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Bar Jones
                                  </Text>
                                  <Text>
                                    there
                                  </Text>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Not a stork
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                            >
                              <View>
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "baz.png",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Baz Chu
                                  </Text>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Could be
                                  </Text>
                                </View>
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "bonk.jpg",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Bonk Gundsdottir
                                  </Text>
                                  <Text
                                    numberOfLines={4}
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                            >
                              <View>
                                <View />
                                <View />
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </View>
</View>
`;

exports[`renders with invite button when a moderator 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
          >
            <View
              collapsable={false}
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                >
                  MockedScreen
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
        >
          <View
            collapsable={false}
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View>
                        <RCTScrollView
                          ListFooterComponent={null}
                          ListHeaderComponent={
                            <View>
                              <Banner
                                group={
                                  {
                                    "allowGroupInvites": true,
                                  }
                                }
                                handleInviteOnPress={[Function]}
                                showInviteButton={true}
                              />
                              <View>
                                <SearchBar
                                  onChangeText={[Function]}
                                  placeholder="Search Members"
                                />
                                <PopupMenuButton
                                  actions={[]}
                                >
                                  <Text />
                                  <Icon
                                    name="ArrowDown"
                                  />
                                </PopupMenuButton>
                              </View>
                            </View>
                          }
                          data={
                            [
                              {
                                "avatarUrl": "foo.gif",
                                "bio": "Hello!",
                                "id": "1",
                                "location": "here",
                                "name": "Foo Lane",
                              },
                              {
                                "avatarUrl": "bar.png",
                                "bio": "Not a stork",
                                "id": "2",
                                "location": "there",
                                "name": "Bar Jones",
                              },
                              {
                                "avatarUrl": "baz.png",
                                "bio": "Could be",
                                "id": "3",
                                "name": "Baz Chu",
                              },
                              {
                                "avatarUrl": "bonk.jpg",
                                "id": "4",
                                "name": "Bonk Gundsdottir",
                              },
                              {
                                "avatarUrl": "woof.png",
                                "id": "5",
                              },
                              {
                                "id": -1,
                              },
                            ]
                          }
                          getItem={[Function]}
                          getItemCount={[Function]}
                          keyExtractor={[Function]}
                          onContentSizeChange={[Function]}
                          onEndReached={[Function]}
                          onLayout={[Function]}
                          onMomentumScrollBegin={[Function]}
                          onMomentumScrollEnd={[Function]}
                          onScroll={[Function]}
                          onScrollBeginDrag={[Function]}
                          onScrollEndDrag={[Function]}
                          removeClippedSubviews={false}
                          renderItem={[Function]}
                          scrollEventThrottle={50}
                          stickyHeaderIndices={[]}
                          viewabilityConfigCallbackPairs={[]}
                        >
                          <View>
                            <View
                              onLayout={[Function]}
                            >
                              <View>
                                <View>
                                  <View
                                    style={
                                      [
                                        {
                                          "overflow": "hidden",
                                        },
                                        undefined,
                                      ]
                                    }
                                  >
                                    <FastImageView
                                      defaultSource={null}
                                      resizeMode="cover"
                                      source={
                                        {
                                          "uri": undefined,
                                        }
                                      }
                                      style={
                                        {
                                          "bottom": 0,
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                        }
                                      }
                                    />
                                  </View>
                                  <div
                                    colors={
                                      [
                                        "rgba(0, 0, 0, 0)",
                                        "rgba(0, 0, 0, 0.1)",
                                        "rgba(0, 0, 0, 0.3)",
                                        "rgba(0, 0, 0, 0.6)",
                                      ]
                                    }
                                  />
                                  <View>
                                    <Text />
                                  </View>
                                  <View>
                                    <View
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View>
                                        <View>
                                          <Icon
                                            name="Invite"
                                          />
                                          <Text>
                                            Invite
                                          </Text>
                                        </View>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                                <View>
                                  <View>
                                    <Icon
                                      name="Search"
                                    />
                                    <TextInput
                                      autoCapitalize="none"
                                      autoCorrect={false}
                                      autoFocus={false}
                                      editable={true}
                                      onChangeText={[Function]}
                                      placeholder="Search Members"
                                      underlineColorAndroid="transparent"
                                    />
                                  </View>
                                  <View
                                    accessible={true}
                                    collapsable={false}
                                    focusable={true}
                                    hitSlop={
                                      {
                                        "bottom": 5,
                                        "left": 5,
                                        "right": 5,
                                        "top": 5,
                                      }
                                    }
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                  >
                                    <Text />
                                    <Icon
                                      name="ArrowDown"
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                            >
                              <View>
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "foo.gif",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Foo Lane
                                  </Text>
                                  <Text>
                                    here
                                  </Text>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Hello!
                                  </Text>
                                </View>
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "bar.png",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Bar Jones
                                  </Text>
                                  <Text>
                                    there
                                  </Text>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Not a stork
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                            >
                              <View>
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "baz.png",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Baz Chu
                                  </Text>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Could be
                                  </Text>
                                </View>
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "bonk.jpg",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Bonk Gundsdottir
                                  </Text>
                                  <Text
                                    numberOfLines={4}
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                            >
                              <View>
                                <View />
                                <View />
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </View>
</View>
`;
